Corrected logo alignment.

--- a/style.css
+++ b/style.css
@@ -178,9 +178,10 @@ body {
   body {
     background-image: url(./images/bg-mobile.svg);
     background-size: contain;
+    padding-block: 1rem;
   }
   .main {
-    grid-template-columns: 90%;
+    grid-template-columns: 80%;
     justify-content: center;
   }
   .container {
@@ -200,5 +201,14 @@ body {
 
   .footer__social-list {
     justify-content: center;
+  }
+  .header__logo {
+    padding-bottom: 0rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .main {
+    grid-template-columns: 100%;
   }
 }
